saves/test/demo_full_20240802_193545/countbcd/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp countbcd_tb.v countbcd.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
countbcd_tb.v:98: $finish called at 1410000 (1ps)

iverilog cmd 2 error:

